Rename AmplifierGroup to EnumeratedAmplifier